passing new url

--- a/marriage_hall_booking/.env
+++ b/marriage_hall_booking/.env
@@ -4,10 +4,10 @@ DJANGO_DEBUG=False
 DJANGO_ALLOWED_HOSTS=127.0.0.1,localhost,mandap-app.onrender.com
 
 # PostgreSQL database
-DB_NAME=mandap_db
-DB_USER=mandap_db_user
-DB_PASSWORD=vSB2KKsT89noChogLDAMuNHlNPut6Uww
-DB_HOST=dpg-d25jvuqdbo4c7382ei20-a
+DB_NAME=mandapdb_a2p2
+DB_USER=mandapusersher
+DB_PASSWORD=IO0FCizRktv5NAGev3pgul1MNLUE06sM
+DB_HOST=dpg-d289q2vdiees73dfcnu0-a
 DB_PORT=5432
 
 # Gmail SMTP
